2005-10-19  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_window.c: do not try to align full-width chars
	to a half-witdh char when variable column width is enabled
	(Thanks to "Oibane" for reporting and helping to fix this).

	* xwindow/x_dnd.c: added sanity checks.

2005-10-17  MINAMI Hirokazu  <minami@mistfall.net>
	
	* doc/term/mlterm.t[ci]: disable mouse position reporting
	in "reset" sequence for Debian BTS#55637.
	(stolen from ncurses-5.5/misc/terminfo.src)

2005-10-13  MINAMI Hirokazu  <minami@mistfall.net>

	* mlterm/ml_char.c:
	- Since LP64 glibc's malloc() is known to always return
	16-byte aligned chunks, sanity check can be omitted.

	- changed nl_ch and sp_ch from file-local to fuction-local.

2005-10-05  Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/iiimf/aux.c: renamed to ..
	* inputmethod/iiimf/im_iiimf_aux.c: this.
	(see http://www.cygwin.com/faq/faq_toc.html#TOC58)

2005-09-29  MINAMI Hirokazu  <minami@mistfall.net>

	* mlterm/ml_vt100_parser.c: do not reset parser state in
	restore_cursor().

	* xwindow/x_im.h: #include <stdio.h> for sprintf.

2005-09-26  MINAMI Hirokazu  <minami@mistfall.net>

	* doc/term/mlterm.t[ic]: use xterm like sequences for
	rmcup/smcup since
	- length of termcap/terminfo entries can be a bit shorter.
	- we may implement titeInhibit someday.

2005-09-25  MINAMI Hirokazu  <minami@mistfall.net>

	* mlterm/ml_vt100_parser.c: now passes test #2 of the vttest
	on ja_JP.EUC-JP.

2005-09-23  MINAMI Hirokazu <minami@mistfall.net>

	* mkf/lib/mkf_gb18030_2000_intern.c, mkf/lib/mkf_xct_parser.c:
	added casts to clarify signedness.

2005-09-23  Mike FABIAN  <mfabian@suse.de>

	* kiklib/src/kik_utmp_utmper.c, tool/mlclient/main.c:
	fix implicit function declarations (patch by
	MINAMI Hirokazu <minami@mistfall.net>).

2005-09-19 MINAMI Hirokazu <minami@mistfall.net>
	
	* kiklib/src/kik_conf_io.c: added a debugging feature.
	The user configuration directory can be overridden using CONF_DIR.
